[DEV] Home page [ADD] Custom scrollbar [FIX] Resizing in login page [FIX] Changed theming from palettes to sys variables

--- a/onboard_2024_front/src/app/login/login.component.scss
+++ b/onboard_2024_front/src/app/login/login.component.scss
@@ -1,54 +1,49 @@
 /* login.component.scss */
 .login-container {
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - 64px);
+  width: 100%;
+  background-color: inherit;
+
+  @media (max-width: 600px) {
+    width: 67%;
+    margin: 0 auto;
+  }
+
+  .login-logo {
+    width: 300px;
+    height: auto;
+    margin-bottom: 20px;
+
+    @media (max-width: 600px) {
+      width: 75%;
+    }
+  }
+
+  .login-card {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    background-color: var(--sys-surface-container);
+    padding: 20px;
     width: 100%;
-    background-color: inherit;
-  
-    @media (max-width: 500px) {
-      width: 75%;
-      margin: 0 auto; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+
+    .login-form-field {
+      width: 100%;
+      margin-bottom: 10px;
     }
-  
-    .login-logo {
-      width: 300px;
-      height: auto;
-      margin-bottom: 20px;
-    
-      @media (max-width: 500px) {
-        width: 75%;
-      }
-    }
-    
-    .login-card {
+
+    .buttons {
       display: flex;
       flex-direction: column;
-      align-items: center; 
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 400px;
-      margin: 0 20px; 
-    
-      .login-form-field {
-        width: 100%;
-        margin-bottom: 10px;
-      }
-      
-      .buttons {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        margin-bottom: 10px;
-        width: 75%;
-      }
+      gap: 20px;
+      margin-bottom: 10px;
+      width: 75%;
     }
   }
-  
-  
-  
-  
+}
