--- a/onboard_2024_front/src/m3-theme.scss
+++ b/onboard_2024_front/src/m3-theme.scss
@@ -4,156 +4,138 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-// Note: Color palettes are generated from primary: 102648
-$_palettes: (
-  primary: (
-    0: #000000,
-    10: #031b3d,
-    20: #1c3053,
-    25: #273b5e,
-    30: #33476b,
-    35: #3f5377,
-    40: #4b5f84,
-    50: #64779e,
-    60: #7d91b9,
-    70: #98abd5,
-    80: #b3c7f1,
-    90: #d7e2ff,
-    95: #ecf0ff,
-    98: #f9f9ff,
-    99: #fdfbff,
-    100: #ffffff,
-  ),
-  secondary: (
-    0: #000000,
-    10: #141c29,
-    20: #29303f,
-    25: #343b4a,
-    30: #404756,
-    35: #4b5262,
-    40: #575e6e,
-    50: #707788,
-    60: #8a91a2,
-    70: #a4abbd,
-    80: #c0c6d9,
-    90: #dce2f6,
-    95: #ecf0ff,
-    98: #f9f9ff,
-    99: #fdfbff,
-    100: #ffffff,
-  ),
-  tertiary: (
-    0: #000000,
-    10: #2b1132,
-    20: #422648,
-    25: #4d3154,
-    30: #5a3c60,
-    35: #66486c,
-    40: #735379,
-    50: #8d6c93,
-    60: #a885ae,
-    70: #c49fc9,
-    80: #e1bae5,
-    90: #fbd7ff,
-    95: #ffebfe,
-    98: #fff7fb,
-    99: #fffbff,
-    100: #ffffff,
-  ),
-  neutral: (
-    0: #000000,
-    10: #1b1b1e,
-    20: #303033,
-    25: #3b3b3e,
-    30: #464649,
-    35: #525255,
-    40: #5e5e61,
-    50: #77777a,
-    60: #919093,
-    70: #acabae,
-    80: #c7c6c9,
-    90: #e3e2e5,
-    95: #f2f0f3,
-    98: #fbf9fc,
-    99: #fdfbff,
-    100: #ffffff,
-    4: #0d0e11,
-    6: #121316,
-    12: #1f1f22,
-    17: #292a2d,
-    22: #343537,
-    24: #38393c,
-    87: #dbd9dd,
-    92: #e9e7eb,
-    94: #efedf1,
-    96: #f5f3f6,
-  ),
-  neutral-variant: (
-    0: #000000,
-    10: #191c22,
-    20: #2e3037,
-    25: #393b42,
-    30: #44474e,
-    35: #50525a,
-    40: #5c5e66,
-    50: #75777f,
-    60: #8e9099,
-    70: #a9abb3,
-    80: #c4c6cf,
-    90: #e1e2eb,
-    95: #eff0f9,
-    98: #f9f9ff,
-    99: #fdfbff,
-    100: #ffffff,
-  ),
-  error: (
-    0: #000000,
-    10: #410002,
-    20: #690005,
-    25: #7e0007,
-    30: #93000a,
-    35: #a80710,
-    40: #ba1a1a,
-    50: #de3730,
-    60: #ff5449,
-    70: #ff897d,
-    80: #ffb4ab,
-    90: #ffdad6,
-    95: #ffedea,
-    98: #fff8f7,
-    99: #fffbff,
-    100: #ffffff,
-  ),
-);
+$light-theme: mat.define-theme((color: (theme-type: light,
+        use-system-variables: true,
+      ),
+      typography: (use-system-variables: true,
+      ),
+    ));
+$dark-theme: mat.define-theme((color: (theme-type: dark,
+        use-system-variables: true,
+      ),
+      typography: (use-system-variables: true,
+      ),
+    ));
 
-$_rest: (
-  secondary: map.get($_palettes, secondary),
-  neutral: map.get($_palettes, neutral),
-  neutral-variant: map.get($_palettes,  neutral-variant),
-  error: map.get($_palettes, error),
-);
-$_primary: map.merge(map.get($_palettes, primary), $_rest);
-$_tertiary: map.merge(map.get($_palettes, tertiary), $_rest);
+:root,
+:host {
+  --sys-background: #faf8ff;
+  --sys-on-background: #1a1b21;
+  --sys-surface: #faf8ff;
+  --sys-surface-dim: #dad9e0;
+  --sys-surface-bright: #faf8ff;
+  --sys-surface-container-lowest: #ffffff;
+  --sys-surface-container-low: #f4f3fa;
+  --sys-surface-container: #eeedf4;
+  --sys-surface-container-high: #e9e7ef;
+  --sys-surface-container-highest: #e3e1e9;
+  --sys-on-surface: #1a1b21;
+  --sys-surface-variant: #e2e2ec;
+  --sys-on-surface-variant: #45464f;
+  --sys-inverse-surface: #2f3036;
+  --sys-inverse-on-surface: #f1f0f7;
+  --sys-outline: #757680;
+  --sys-outline-variant: #c5c6d0;
+  --sys-shadow: #000000;
+  --sys-scrim: #000000;
+  --sys-surface-tint: #4b5c92;
+  --sys-primary: #4b5c92;
+  --sys-on-primary: #ffffff;
+  --sys-primary-container: #dbe1ff;
+  --sys-on-primary-container: #334479;
+  --sys-inverse-primary: #b5c4ff;
+  --sys-secondary: #4b5c92;
+  --sys-on-secondary: #ffffff;
+  --sys-secondary-container: #dbe1ff;
+  --sys-on-secondary-container: #334478;
+  --sys-tertiary: #7f4d7b;
+  --sys-on-tertiary: #ffffff;
+  --sys-tertiary-container: #ffd6f7;
+  --sys-on-tertiary-container: #643662;
+  --sys-error: #904a43;
+  --sys-on-error: #ffffff;
+  --sys-error-container: #ffdad5;
+  --sys-on-error-container: #73342d;
+  --sys-neutral: #76767d;
+  --sys-neutral-variant: #75767f;
+  --sys-primary-fixed: #dbe1ff;
+  --sys-primary-fixed-dim: #b5c4ff;
+  --sys-on-primary-fixed: #01174b;
+  --sys-on-primary-fixed-variant: #334479;
+  --sys-secondary-fixed: #dbe1ff;
+  --sys-secondary-fixed-dim: #b4c5ff;
+  --sys-on-secondary-fixed: #01174b;
+  --sys-on-secondary-fixed-variant: #334478;
+  --sys-tertiary-fixed: #ffd6f7;
+  --sys-tertiary-fixed-dim: #f0b3e8;
+  --sys-on-tertiary-fixed: #330834;
+  --sys-on-tertiary-fixed-variant: #643662;
+  --sys-inverse-secondary: #b4c5ff;
+  --sys-inverse-tertiary: #f0b3e8;
+  --sys-inverse-error: #ffb4ab;
+  --sys-error-fixed: #ffdad5;
+  --sys-error-fixed-dim: #ffb4ab;
+  --sys-on-error-fixed: #3b0907;
+  --sys-on-error-fixed-variant: #73342d;
+}
 
-$light-theme: mat.define-theme((
-  color: (
-    theme-type: light,
-    primary: $_primary,
-    tertiary: $_tertiary,
-    use-system-variables: true,
-  ),
-  typography: (
-    use-system-variables: true,
-  ),
-));
-$dark-theme: mat.define-theme((
-  color: (
-    theme-type: dark,
-    primary: $_primary,
-    tertiary: $_tertiary,
-    use-system-variables: true,
-  ),
-  typography: (
-    use-system-variables: true,
-  ),
-));
+.dark-theme {
+  --sys-background: #121318;
+  --sys-on-background: #e3e1e9;
+  --sys-surface: #121318;
+  --sys-surface-dim: #121318;
+  --sys-surface-bright: #38393f;
+  --sys-surface-container-lowest: #0d0e13;
+  --sys-surface-container-low: #1a1b21;
+  --sys-surface-container: #1e1f25;
+  --sys-surface-container-high: #292a2f;
+  --sys-surface-container-highest: #34343a;
+  --sys-on-surface: #e3e1e9;
+  --sys-surface-variant: #45464f;
+  --sys-on-surface-variant: #c5c6d0;
+  --sys-inverse-surface: #e3e1e9;
+  --sys-inverse-on-surface: #2f3036;
+  --sys-outline: #8f909a;
+  --sys-outline-variant: #45464f;
+  --sys-shadow: #000000;
+  --sys-scrim: #000000;
+  --sys-surface-tint: #b5c4ff;
+  --sys-primary: #b5c4ff;
+  --sys-on-primary: #1b2d61;
+  --sys-primary-container: #334479;
+  --sys-on-primary-container: #dbe1ff;
+  --sys-inverse-primary: #4b5c92;
+  --sys-secondary: #b5c4ff;
+  --sys-on-secondary: #1c2d61;
+  --sys-secondary-container: #344479;
+  --sys-on-secondary-container: #dce1ff;
+  --sys-tertiary: #efb3e8;
+  --sys-on-tertiary: #4b1f4a;
+  --sys-tertiary-container: #643662;
+  --sys-on-tertiary-container: #ffd6f7;
+  --sys-error: #ffb4ab;
+  --sys-on-error: #561e19;
+  --sys-error-container: #73342d;
+  --sys-on-error-container: #ffdad5;
+  --sys-neutral: #76767d;
+  --sys-neutral-variant: #75767f;
+  --sys-primary-fixed: #dbe1ff;
+  --sys-primary-fixed-dim: #b5c4ff;
+  --sys-on-primary-fixed: #01174b;
+  --sys-on-primary-fixed-variant: #334479;
+  --sys-secondary-fixed: #dce1ff;
+  --sys-secondary-fixed-dim: #b5c4ff;
+  --sys-on-secondary-fixed: #03174b;
+  --sys-on-secondary-fixed-variant: #344479;
+  --sys-tertiary-fixed: #ffd6f7;
+  --sys-tertiary-fixed-dim: #efb3e8;
+  --sys-on-tertiary-fixed: #330834;
+  --sys-on-tertiary-fixed-variant: #643662;
+  --sys-inverse-secondary: #4c5c92;
+  --sys-inverse-tertiary: #7f4d7b;
+  --sys-inverse-error: #904a43;
+  --sys-error-fixed: #ffdad5;
+  --sys-error-fixed-dim: #ffb4ab;
+  --sys-on-error-fixed: #3b0907;
+  --sys-on-error-fixed-variant: #73342d;
+}
